--- a/assets/stylesheets/common/_listing-cards.scss
+++ b/assets/stylesheets/common/_listing-cards.scss
@@ -69,8 +69,8 @@
       @include listing-card-data-overlay(left);
       background-color: rgba(var(--secondary-rgb), 0.85);
 
-      &:before {
-        content: "$";
+      &:after {
+        content: "Ft";
       }
     }
 
