--- a/assets/stylesheets/common/_listing-table-item.scss
+++ b/assets/stylesheets/common/_listing-table-item.scss
@@ -21,8 +21,8 @@
 
     &.listing-price {
       // TODO remove and make dynamic currency
-      &:before {
-        content: "$";
+      &:after {
+        content: "Ft";
       }
     }
 
